--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body {
   font-size: 100%;
   line-height: 1;
   font-size: 10px;
+  font-weight: 400;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -92,7 +93,7 @@ h6 {
 @font-face {
   font-family: "icomoon";
   src: url("../fonts/icomoon.eot?pnusfa");
-  src: url("../fonts/icomoon.eot?pnusfa#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?pnusfa") format("truetype"), url("../fonts/icomoon.woff?pnusfa") format("woff"), url("../fonts/icomoon.svg?pnusfa#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?pnusfa#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff?pnusfa") format("woff"), url("../fonts/icomoon.svg?pnusfa#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -222,7 +223,6 @@ h6 {
   -ms-flex-align: center;
   align-items: center;
   color: #969696;
-  font-size: 1.2rem;
   align-items: center;
   min-height: 44px;
 }
@@ -275,14 +275,12 @@ h6 {
 }
 
 .header_head .icon-phone {
-  font-size: 1.6rem;
   margin-right: 1.2rem;
   vertical-align: middle;
   color: #969696;
 }
 
 .header_head .icon-sign {
-  font-size: 1.4rem;
   margin-right: 0.7rem;
   vertical-align: middle;
 }
@@ -311,7 +309,6 @@ h6 {
 .header_footer__link {
   color: #969696;
   text-transform: uppercase;
-  font-size: 1.4rem;
 }
 
 .header_footer__link i {
@@ -332,17 +329,11 @@ h6 {
 }
 
 .header_footer .icon-cart {
-  font-size: 2.2rem;
   margin: 0 4rem;
-}
-
-.header_footer .icon-search {
-  font-size: 2.2rem;
 }
 
 .header_footer__logo {
   font-family: PostNoBillsJaffna;
-  font-size: 3.6rem;
   font-weight: 700;
   text-transform: uppercase;
   color: #fff;
@@ -456,14 +447,12 @@ h6 {
 .footer .footer-head__title {
   color: #fff;
   text-transform: uppercase;
-  font-size: 2.4rem;
   font-family: PlayfairDisplay;
   margin-bottom: 4.5rem;
 }
 
 .footer .footer-head__text {
   color: #fff;
-  font-size: 1.4rem;
   line-height: 2.1rem;
 }
 
@@ -487,7 +476,6 @@ h6 {
   padding: 1.3rem 2rem;
   margin-bottom: 2rem;
   color: #D0D0D0;
-  font-size: 1.4rem;
   background: #0F0F0F;
 }
 
@@ -560,7 +548,6 @@ h6 {
 .footer .footer-head .mailing__form input[type=email] {
   background-color: rgba(255, 255, 255, 0.4);
   color: #000;
-  font-size: 1.4rem;
   padding: 1.2rem 1.5rem 1.1rem;
   -webkit-box-flex: 0;
   -ms-flex: 0 1 auto;
@@ -591,7 +578,6 @@ h6 {
   background-color: #0F0F0F;
   padding: 1rem 2rem;
   color: #fff;
-  font-size: 1.4rem;
   letter-spacing: 0.05em;
   -webkit-box-flex: 0;
   -ms-flex: 0 1 7.29vw;
@@ -637,10 +623,6 @@ body {
   font-family: PTSans;
 }
 
-p {
-  font-weight: 400;
-}
-
 .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -665,7 +647,6 @@ p {
 .title {
   font-family: PlayfairDisplay;
   font-weight: 700;
-  font-size: 3.6rem;
   text-transform: uppercase;
   color: #fff;
   position: relative;
@@ -721,8 +702,8 @@ p {
 }
 
 .promo__head {
-  min-width: 260px;
-  min-height: 260px;
+  min-width: 170px;
+  min-height: 170px;
   width: 16.6vw;
   height: 16.6vw;
   margin: 0 auto 8rem;
@@ -737,7 +718,6 @@ p {
   font-family: PostNoBillsJaffna;
   display: inline-block;
   font-weight: 700;
-  font-size: 6.4rem;
   top: 50%;
   padding: 0 0 0.2rem;
   margin-top: -16.6vw;
@@ -747,7 +727,7 @@ p {
 .promo__title::after {
   content: "";
   height: 0.2rem;
-  width: 18.3rem;
+  width: 100%;
   background: #fff;
   position: absolute;
   left: 0;
@@ -756,7 +736,6 @@ p {
 
 .promo__address {
   display: block;
-  font-size: 2.2rem;
   padding: 1rem 0 9.4rem;
   position: relative;
   top: 50%;
@@ -768,7 +747,6 @@ p {
   max-width: 38vw;
   text-align: center;
   padding: 0 2rem;
-  font-size: 1.6rem;
   line-height: 2.4rem;
   text-transform: uppercase;
 }
@@ -853,14 +831,12 @@ p {
 
 .collections-header .catalog__itemname {
   font-family: PlayfairDisplay;
-  font-size: 1.8rem;
   margin-bottom: 1.7rem;
 }
 
 .collections-header .catalog__price {
   font-family: PlayfairDisplay;
   font-weight: 700;
-  font-size: 1.6rem;
   color: #D0D0D0;
 }
 
@@ -921,7 +897,6 @@ p {
 }
 
 .collections-footer .old-collection__right .old-collection__text {
-  font-size: 1.4rem;
   line-height: 2.4rem;
   min-width: 300px;
   max-width: 24.53125vw;
@@ -988,7 +963,6 @@ p {
 
 .new-arrivals .products__name {
   font-family: PlayfairDisplay;
-  font-size: 1.8rem;
   text-align: left;
   margin-bottom: 1.6rem;
 }
@@ -996,7 +970,6 @@ p {
 .new-arrivals .products__price {
   font-family: PlayfairDisplay;
   font-weight: 700;
-  font-size: 1.6rem;
   color: #D0D0D0;
   text-align: left;
 }
@@ -1037,9 +1010,109 @@ p {
   margin-right: 0;
 }
 
-@media (max-width: 1400px) {
-  html {
-    font-size: 8px;
+@media (min-width: 767px) {
+  .header_head__inner {
+    font-size: calc(14px + -2 * (100vw / 1920));
+  }
+
+  .header_head .icon-phone {
+    font-size: calc(11px + 5 * (100vw / 1920));
+  }
+
+  .header_head .icon-sign {
+    font-size: calc(10px + 4 * (100vw / 1920));
+  }
+
+  .header_footer__link {
+    font-size: calc(10px + 4 * (100vw / 1920));
+  }
+
+  .header_footer .icon-cart {
+    font-size: calc(16px + 6 * (100vw / 1920));
+  }
+
+  .header_footer .icon-search {
+    font-size: calc(16px + 6 * (100vw / 1920));
+  }
+
+  .header_footer__logo {
+    font-size: calc(20px + 16 * (100vw / 1920));
+  }
+
+  .footer .footer-head__title {
+    font-size: calc(16px + 8 * (100vw / 1920));
+  }
+
+  .footer .footer-head__text {
+    font-size: calc(12px + 2 * (100vw / 1920));
+  }
+
+  .footer .footer-head .categories__links {
+    font-size: calc(11px + 3 * (100vw / 1920));
+  }
+
+  .footer .footer-head .mailing__form input[type=email] {
+    font-size: calc(10px + 4 * (100vw / 1920));
+  }
+
+  .footer .footer-head .mailing__form input[type=email]::-webkit-input-placeholder {
+    font-size: calc(12px + 2 * (100vw / 1920));
+  }
+
+  .footer .footer-head .mailing__form input[type=email]::-moz-placeholder {
+    font-size: calc(12px + 2 * (100vw / 1920));
+  }
+
+  .footer .footer-head .mailing__form input[type=email]:-ms-input-placeholder {
+    font-size: calc(12px + 2 * (100vw / 1920));
+  }
+
+  .footer .footer-head .mailing__form input[type=email]::-ms-input-placeholder {
+    font-size: calc(12px + 2 * (100vw / 1920));
+  }
+
+  .footer .footer-head .mailing__form input[type=email]::placeholder {
+    font-size: calc(12px + 2 * (100vw / 1920));
+  }
+
+  .footer .footer-head .mailing__form input[type=submit] {
+    font-size: calc(10px + 4 * (100vw / 1920));
+  }
+
+  .title {
+    font-size: calc(28px + 8 * (100vw / 1920));
+  }
+
+  .promo__title {
+    font-size: calc(48px + 16 * (100vw / 1920));
+  }
+
+  .promo__address {
+    font-size: calc(16px + 6 * (100vw / 1920));
+  }
+
+  .promo__desc {
+    font-size: calc(12px + 4 * (100vw / 1920));
+  }
+
+  .collections-header .catalog__itemname {
+    font-size: calc(16px + 2 * (100vw / 1920));
+  }
+
+  .collections-header .catalog__price {
+    font-size: calc(14px + 2 * (100vw / 1920));
+  }
+
+  .collections-footer .old-collection__right .old-collection__text {
+    font-size: calc(13px + 1 * (100vw / 1920));
+  }
+
+  .new-arrivals .products__name {
+    font-size: calc(16px + 2 * (100vw / 1920));
+  }
+
+  .new-arrivals .products__price {
+    font-size: calc(14px + 2 * (100vw / 1920));
   }
 }
 
@@ -1235,6 +1308,10 @@ p {
 }
 
 @media (max-width: 767px) {
+  .header_head__inner {
+    font-size: calc(14px + -3.4 * (100vw - 320px) / 1920);
+  }
+
   .header_head__item {
     text-align: center;
     width: 100%;
@@ -1260,6 +1337,30 @@ p {
 
   .header_head__link {
     display: none;
+  }
+
+  .header_head .icon-phone {
+    font-size: calc(11px + 8.5 * (100vw - 320px) / 1920);
+  }
+
+  .header_head .icon-sign {
+    font-size: calc(10px + 6.8 * (100vw - 320px) / 1920);
+  }
+
+  .header_footer__link {
+    font-size: calc(10px + 6.8 * (100vw - 320px) / 1920);
+  }
+
+  .header_footer .icon-cart {
+    font-size: calc(16px + 10.2 * (100vw - 320px) / 1920);
+  }
+
+  .header_footer .icon-search {
+    font-size: calc(16px + 10.2 * (100vw - 320px) / 1920);
+  }
+
+  .header_footer__logo {
+    font-size: calc(20px + 27.2 * (100vw - 320px) / 1920);
   }
 
   .menu-burger {
@@ -1333,6 +1434,82 @@ p {
 
   .mobile-header {
     display: block;
+  }
+
+  .footer .footer-head__title {
+    font-size: calc(16px + 13.6 * (100vw - 320px) / 1920);
+  }
+
+  .footer .footer-head__text {
+    font-size: calc(12px + 3.4 * (100vw - 320px) / 1920);
+  }
+
+  .footer .footer-head .categories__links {
+    font-size: calc(11px + 5.1 * (100vw - 320px) / 1920);
+  }
+
+  .footer .footer-head .mailing__form input[type=email] {
+    font-size: calc(10px + 6.8 * (100vw - 320px) / 1920);
+  }
+
+  .footer .footer-head .mailing__form input[type=email]::-webkit-input-placeholder {
+    font-size: calc(12px + 3.4 * (100vw - 320px) / 1920);
+  }
+
+  .footer .footer-head .mailing__form input[type=email]::-moz-placeholder {
+    font-size: calc(12px + 3.4 * (100vw - 320px) / 1920);
+  }
+
+  .footer .footer-head .mailing__form input[type=email]:-ms-input-placeholder {
+    font-size: calc(12px + 3.4 * (100vw - 320px) / 1920);
+  }
+
+  .footer .footer-head .mailing__form input[type=email]::-ms-input-placeholder {
+    font-size: calc(12px + 3.4 * (100vw - 320px) / 1920);
+  }
+
+  .footer .footer-head .mailing__form input[type=email]::placeholder {
+    font-size: calc(12px + 3.4 * (100vw - 320px) / 1920);
+  }
+
+  .footer .footer-head .mailing__form input[type=submit] {
+    font-size: calc(10px + 6.8 * (100vw - 320px) / 1920);
+  }
+
+  .title {
+    font-size: calc(28px + 13.6 * (100vw - 320px) / 1920);
+  }
+
+  .promo__title {
+    font-size: calc(48px + 27.2 * (100vw - 320px) / 1920);
+  }
+
+  .promo__address {
+    font-size: calc(16px + 10.2 * (100vw - 320px) / 1920);
+  }
+
+  .promo__desc {
+    font-size: calc(12px + 6.8 * (100vw - 320px) / 1920);
+  }
+
+  .collections-header .catalog__itemname {
+    font-size: calc(16px + 3.4 * (100vw - 320px) / 1920);
+  }
+
+  .collections-header .catalog__price {
+    font-size: calc(14px + 3.4 * (100vw - 320px) / 1920);
+  }
+
+  .collections-footer .old-collection__right .old-collection__text {
+    font-size: calc(13px + 1.7 * (100vw - 320px) / 1920);
+  }
+
+  .new-arrivals .products__name {
+    font-size: calc(16px + 3.4 * (100vw - 320px) / 1920);
+  }
+
+  .new-arrivals .products__price {
+    font-size: calc(14px + 3.4 * (100vw - 320px) / 1920);
   }
 }
 
